force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Ops Failed Records</relationshipLabel>
    <relationshipName>Tax_Ops_Failed_Records</relationshipName>
    <type>Lookup</type>
</CustomField>