force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>