force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Amount_Held__c.field-meta.xml
<CustomField>
    <fullName>Amount_Held__c</fullName>
    <label>Amount Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>