force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <label>CC Address</label>
    <type>TextArea</type>
</CustomField>