force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>