force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FEIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>