force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/FEIN_Encrypt__c.field-meta.xml
<CustomField>
    <fullName>FEIN_Encrypt__c</fullName>
    <label>FEIN E</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>