force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Filing_Successful__c.field-meta.xml
<CustomField>
    <fullName>Filing_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filing Successful?</label>
    <type>Checkbox</type>
</CustomField>