force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove</label>
    <type>Checkbox</type>
</CustomField>