force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <formula>Tax_Ops_Task__r.Tax_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Code</label>
    <type>Text</type>
</CustomField>