force-app/main/default/objects/Tax_Ops_Failed_Record__c/fields/Tax_Ops_Task__c.field-meta.xml
<CustomField>
    <fullName>Tax_Ops_Task__c</fullName>
    <label>Tax Ops Task</label>
    <referenceTo>Tax_Ops_Task__c</referenceTo>
    <relationshipLabel>Tax Ops Failed Records</relationshipLabel>
    <relationshipName>Tax_Ops_Failed_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>