force-app/main/default/objects/Tax_Ops_Failed_Record__c/recordTypes/Failed_Payment.recordType-meta.xml
<RecordType>
    <fullName>Failed_Payment</fullName>
    <active>true</active>
    <label>Failed Payment</label>
</RecordType>